methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:21: error: ';' expected but integer literal found.
  permet de faire 4 V compris dans un carré
                  ^PictureMono2:27: error: ';' expected but integer literal found.
  permet de faire 3 cadres en se basant sur une ligne de base
                  ^